# accelerator

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml
pkg/: accelerator.toml
scripts/: find_funcs.py  find_sigs.py
src/: config.rs  detour.rs  error.rs  lib.rs
