[package]
name = "accelerator"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.71"
bzip2-rs = "0.1.2"
gmod = { version = "17", features = [ "gmcl" ] }
reqwest = { version = "0.11.18", features = [ "blocking" ] }
rglua = "2.1.0"
thiserror = "1.0"
toml = "0.8"
